syntax = "proto3";

package customer.v1;

option go_package = "nordic-bank/pkg/pb/customer/v1";

import "google/protobuf/timestamp.proto";
import "common/v1/common.proto";

service CustomerService {
  // Create a new customer profile
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
  
  // Get customer profile by user ID
  rpc GetCustomerByUserId(GetCustomerByUserIdRequest) returns (GetCustomerByUserIdResponse);
  
  // Update customer profile
  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse);
  
  // Update KYC status
  rpc UpdateKycStatus(UpdateKycStatusRequest) returns (UpdateKycStatusResponse);
}

message Customer {
  string id = 1;
  string user_id = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone = 6;
  string date_of_birth = 7; // YYYY-MM-DD
  string kyc_status = 8;
  common.v1.Address address = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message CreateCustomerRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string date_of_birth = 6;
  common.v1.Address address = 7;
}

message CreateCustomerResponse {
  Customer customer = 1;
}

message GetCustomerByUserIdRequest {
  string user_id = 1;
}

message GetCustomerByUserIdResponse {
  Customer customer = 1;
}

message UpdateCustomerRequest {
  string user_id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string phone = 4;
  optional common.v1.Address address = 5;
}

message UpdateCustomerResponse {
  Customer customer = 1;
}

message UpdateKycStatusRequest {
  string user_id = 1;
  string status = 2; // pending, in_review, verified, rejected, expired
  string notes = 3;
}

message UpdateKycStatusResponse {
  string status = 1;
}
